--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 2% 10% 5% 10%;
+    margin: 5% 5% 5% 5%;
     font: 14pt Monaco;
 }
 
@@ -13,11 +13,26 @@ a:hover {
     text-decoration: underline;
 }
 
-a.title {
+div.title {
+    margin-bottom: 20px;
+}
+
+.title a {
+    font: bold 30pt Monaco;
+    color: black;
+    padding: 10px;
+}
+
+.title a:hover {
     color: black;
 }
 
-a.title:hover {
-    color: black;
-    text-decoration: none;
+td.label {
+    font-weight: bold;
+    padding-right: 20px;
+}
+
+#footer {
+    vertical-align: bottom;
+    text-align: left;
 }
