--- a/templates/site.html
+++ b/templates/site.html
@@ -1,11 +1,23 @@
-<html>
-    <head>
-        <title>mimetypes - {{ title }}</title>
+<?xml version="1.0"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+      xmlns:mediatypes="http://purl.org/NET/mediatypes#">
+      <head>
+        <title>media-types - {{ title }}</title>
         <link rel="stylesheet" href="/css/style.css" type="text/css"></link>
     </head>
 
     <body>
-        <h1><a class="title" href="/">media-types</a></h1>
+        <div class="title">
+            <a href="/">media-types</a>
+        </div>
         {% block content %}{% endblock %}
+
+        <div id="footer">
+            <p>
+            <img alt="rdfa" src="/images/rdfa.png" />
+            <a href="http://code.google.com/p/mediatypes/"><img alt="mediatypes Google Code project" src="/images/google_code.png" border="0"></a>
+            </p>
+        </div>
     </body>
 </html>
