--- a/templates/type.html
+++ b/templates/type.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 <table>
-    {% for mt in media_types %}
     <tr>
+        <th>{{ type }}/*</th>
+    </tr>
+    {% for mt in media_types %}
+    <tr class="{% cycle a,b %}">
         <td><a href="{{ mt.relative_uri }}">{{ mt.name }}</a></td>
     </tr>
     {% endfor %}
