added harvest datetime

--- a/templates/mediatype.html
+++ b/templates/mediatype.html
@@ -32,6 +32,11 @@
     </tr>
     {% endif %}
 
+    <tr>
+        <td class="label">Harvested:</td>
+        <td>{{ mt.created }}</td>
+    </tr>
+
 </table>
 
 {% endblock %}
