--- a/templates/site.html
+++ b/templates/site.html
@@ -4,7 +4,8 @@
       xmlns:dct="http://purl.org/dc/terms/"
       xmlns:void="http://rdfs.org/ns/void#"
       xmlns:foaf="http://xmlns.com/foaf/0.1/"
-      xmlns:mediatypes="http://purl.org/NET/mediatypes#">
+      xmlns:mediatypes="http://purl.org/NET/mediatypes#"
+      xmlns:doap="http://usefulinc.com/ns/doap#">
       <head>
         <title>media-types - {{ title }}</title>
         <link rel="stylesheet" href="/static/style.css" type="text/css"></link>
@@ -12,7 +13,7 @@
 
     <body>
         <div class="title">
-            <a href="/">media-types</a>
+            <a resource="http://purl.org/NET/mediatypes" property="dct:title" href="/">media-types</a>
         </div>
         <div id="content">
             {% block content %}{% endblock %}
