--- a/templates/site.html
+++ b/templates/site.html
@@ -1,4 +1,6 @@
 <?xml version="1.0"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
+    "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
       xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
       xmlns:dct="http://purl.org/dc/terms/"
@@ -21,7 +23,7 @@
         <div id="footer">
             <p>
             <img alt="rdfa" src="/static/rdfa.png" />
-            <a href="http://code.google.com/p/mediatypes/"><img alt="mediatypes Google Code project" src="/static/google_code.png" border="0"></a>
+            <a href="http://code.google.com/p/mediatypes/"><img alt="mediatypes Google Code project" src="/static/google_code.png" style="border:0" /></a>
             </p>
         </div>
     </body>
