used rdfs:label

--- a/templates/type.html
+++ b/templates/type.html
@@ -8,7 +8,7 @@
     {% for mt in media_types %}
     <tr class="{% cycle a,b %}">
         <td>
-            <a href="{{ mt.relative_uri }}"><span about="{{ mt.uri }}" property="dct:title" typeof="mediatypes:MediaType">{{ mt.name }}</span></a>
+            <a href="{{ mt.relative_uri }}"><span about="{{ mt.uri }}" property="rdfs:label" typeof="mediatypes:MediaType">{{ mt.name }}</span></a>
         </td>
     </tr>
     {% endfor %}
