--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@ that are registered with the
 <a rel="dct:creator" href="http://www.iana.org/">Internet Assigned Numbers
     Authority</a>. 
 A URI for a <span about="mediatypes:MediaType" typeof="rdfs:Class" property="rdfs:label">Media Type</span> come in handy when using vocabulary like <a
-    href="http://dublincore.org/documents/dcmi-terms/#terms-hasFormat">dcterms:hasFormat</a>:
+    href="http://dublincore.org/documents/dcmi-terms/#terms-format">dcterms:format</a>:
 </p>
 
 <p style="text-align: center;">
